2004-03-08  Marco Pesenti Gritti  <marco@gnome.org>

	* gtk/gtkentry.c: (gtk_entry_completion_key_press):

	When an action is selected stop the event to be propagated
	otherwise the activate signal is emitted too. (Bug #133394)

Mon Mar  8 04:50:12 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkfilechooserdefault.c (create_path_bar): new function to
	consolidate creating the path_bar.
	(gtk_file_chooser_default_set_current_folder): no longer need to
	pass in the filesystem.

	* gtk/gtkpathbar.h: Removed unused set_pixbuf functions in favor
	of just setting the filesystem.

	* gtk/gtkpathbar.c (gtk_path_bar_finalize): Free root path and
	home_dir.
	(get_button_image): Add images to path_bar.
	(update_button_appearance): use images
	(make_directory_button): Clasify buttons based upon location.
	(_gtk_path_bar_set_path): no longer need a file-system.  Also, add
	rerooting, #135845, #135914

	* tests/testfilechooser.c: Fix reused error handling.

2004-03-08  Anders Carlsson  <andersca@gnome.org>

	* gtk/gtkfilesystemunix.c: (get_icon_for_directory),
	(gtk_file_system_unix_render_icon):
	Use better icons for home and desktop.

2004-03-08  Anders Carlsson  <andersca@gnome.org>

	* gtk/gtkfilechooserentry.c:
	(_gtk_file_chooser_entry_set_base_folder):
	Set the base folder path in the entry.
	
2004-03-08  Christian Neumair  <chris@gnome-de.org>

	* tests/testentrycompletion.c: Fix typo.

2004-03-08  Tor Lillqvist  <tml@iki.fi>

	* README.win32: Update.

	* gtk/gtk.def: Small update. Thanks to J. Ali Harlow. Re-sorted.

	* tests/testfilechooser.c: Correct localtime_r() emulation on
	Win32. Remove a couple of unnecessary Win32-only includes.

Mon Mar  8 01:06:17 2004  Matthias Clasen  <maclas@gmx.de>

	* tests/testentrycompletion.c: Test dynamic addition/removal. 

Sun Mar  7 22:38:49 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkframe.c (gtk_frame_paint): Use ythickness, not 
	xthickness in the calculation of vertical dimensions.
